<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">"mornin' plus"</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">戻る</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">キャンセル</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chicken">"mornin'"</string>
    <string name="chicken2">"mornin' plus"</string>
    <string name="chicken_action_test">動作を確認する</string>
    <string name="chicken_action_test_lable">残り移動時間</string>
    <string name="chicken_add_device">本体を追加</string>
    <string name="chicken_add_selection_main">追加方法を選択</string>
    <string name="chicken_advanced">高度な設定</string>
    <string name="chicken_advanced_detail_value_main">細かな数値設定</string>
    <string name="chicken_advanced_detail_value_sub">"動作パワーおよび昇降スピードの数値の刻みを細かくします。（mornin' plusのみ）"</string>
    <string name="chicken_advanced_more_slowly_main">より遅い昇降スピード</string>
    <string name="chicken_advanced_more_slowly_sub">"昇降スピードをより遅くできますが、電池が消耗すると昇降しなくなる可能性があります。（mornin' plusのみ）"</string>
    <string name="chicken_advanced_value_fixed_main">この機能をオフにすると、設定している値が調整されます</string>
    <string name="chicken_advanced_value_fixed_sub">オフの状態で選択できる、最も近い値に変更されます。</string>
    <string name="chicken_bed_room">寝室</string>
    <string name="chicken_behind">裏</string>
    <string name="chicken_chicken">"mornin'"</string>
    <string name="chicken_chicken2">"mornin' plus"</string>
    <string name="chicken_ck1_movement">開閉の動作</string>
    <string name="chicken_closing_movement">閉める動作</string>
    <string name="chicken_collabo_position">設置位置</string>
    <string name="chicken_confirm_delete_main">この本体と再度接続するためには、接続の設定をし直す必要があります。</string>
    <string name="chicken_confirm_delete_yes">この本体の接続を解除</string>
    <string name="chicken_connect_new">新しい本体を接続</string>
    <string name="chicken_delete_device">この本体の接続を解除</string>
    <string name="chicken_duration">移動時間</string>
    <string name="chicken_duration_min_sec_fmt">%1$d分%2$d秒</string>
    <string name="chicken_duration_sec_fmt">%1$d秒</string>
    <string name="chicken_edit_collabo_position_back_main">カーテンの裏</string>
    <string name="chicken_edit_collabo_position_front_main">カーテンの表</string>
    <string name="chicken_edit_collabo_position_see_installation">取り付け方を確認する</string>
    <string name="chicken_edit_collabo_position_sub">本体を設置する場所を選んでください。表と裏では取り付け方が異なりますのでご注意ください。</string>
    <string name="chicken_edit_duration_set_up_notes_close_sub">カーテンを開けた状態でCLOSEボタンを押し、閉めきったところで停止させてください。</string>
    <string name="chicken_edit_duration_set_up_notes_main">移動時間をリモコン操作で計測して設定できます</string>
    <string name="chicken_edit_duration_set_up_notes_open_sub">カーテンを閉めた状態でOPENボタンを押し、開ききったところで停止させてください。</string>
    <string name="chicken_edit_duration_set_up_notes_title">お知らせ</string>
    <string name="chicken_edit_duration_set_up_plus_close_label">移動時間（閉まる動作）</string>
    <string name="chicken_edit_duration_set_up_plus_open_label">移動時間（開く動作）</string>
    <string name="chicken_edit_duration_set_up_saved_main_fmt">移動する時間を%1$sに設定しました</string>
    <string name="chicken_edit_duration_set_up_selection_main">移動時間を選択</string>
    <string name="chicken_edit_duration_set_up_title">移動時間</string>
    <string name="chicken_edit_duration_set_up_v1_label">移動時間</string>
    <string name="chicken_edit_lifting_safety_rate_confirm_main">上昇時間を補正しますか？</string>
    <string name="chicken_edit_lifting_safety_rate_confirm_set_default">初期値に戻す</string>
    <string name="chicken_edit_lifting_safety_rate_confirm_set_fmt">%1$sに補正する</string>
    <string name="chicken_edit_lifting_safety_rate_confirm_sub">変更する場合は必ず動作確認を行い、上昇時間が過不足ないかを確認してください。</string>
    <string name="chicken_edit_lifting_safety_rate_main">上昇時間の補正</string>
    <string name="chicken_edit_lifting_safety_rate_selection_main">上昇時間の補正値を選択</string>
    <string name="chicken_edit_lifting_safety_rate_sub">上昇が足りずにタイヤが空回りする場合は大きく、上昇時にカチカチと音がなる場合は小さくします。</string>
    <string name="chicken_edit_lifting_safety_rate_sub_warn">上昇動作に問題がない場合は、故障の原因になりますので変更しないでください。</string>
    <string name="chicken_edit_lifting_speed_main">昇降スピード</string>
    <string name="chicken_edit_lifting_speed_selection_main">昇降スピードを選択</string>
    <string name="chicken_edit_lifting_speed_sub">数値を上げると開閉が始まるまでの時間が短くなりますが、動作音が大きくなります。</string>
    <string name="chicken_edit_lifting_type_main">手でカーテンを開閉</string>
    <string name="chicken_edit_lifting_type_off_main">この機能をオフにすると、タイヤが昇降しなくなります</string>
    <string name="chicken_edit_lifting_type_off_sub">カーテンを開閉する際は、専用アプリからリモコンで操作してください。</string>
    <string name="chicken_edit_lifting_type_sub">オフにするとタイヤが下降しなくなり、すぐに開閉し始めますが、カーテンを手で開けられなくなります。</string>
    <string name="chicken_edit_movement_duration_sub">本体がカーテンレールを移動する秒数を設定します。動作パワーによって必要な移動時間は異なります。</string>
    <string name="chicken_edit_movement_power_selection_main">動作パワーを選択</string>
    <string name="chicken_edit_movement_power_sub">パワーを上げると重いカーテンに対応でき、開閉速度も速くなりますが、動作音が大きくなります。</string>
    <string name="chicken_edit_position_sub">カーテンを開ける際の向きを選んでください。右側の窓であれば通常は右方向に開きます。</string>
    <string name="chicken_edit_title">本体設定</string>
    <string name="chicken_firmware">ファームウェア</string>
    <string name="chicken_front">表</string>
    <string name="chicken_icon">アイコン</string>
    <string name="chicken_left">左</string>
    <string name="chicken_left_arrow">開く方向（左）</string>
    <string name="chicken_lift">タイヤの昇降</string>
    <string name="chicken_list_battery_low">電池残量が減っています</string>
    <string name="chicken_list_battery_none">電池を交換してください</string>
    <string name="chicken_list_connected">接続済みです</string>
    <string name="chicken_list_connecting">探しています…</string>
    <string name="chicken_list_disconnected">接続されていません</string>
    <string name="chicken_list_has_firmware_update">ファームウェアの更新があります</string>
    <string name="chicken_list_invalid_pairing">接続設定が無効になっています</string>
    <string name="chicken_list_never_connected">一度も接続されていません</string>
    <string name="chicken_lounge">リビング</string>
    <string name="chicken_minute">分</string>
    <string name="chicken_name">名前</string>
    <string name="chicken_name_input_main">名前を入力</string>
    <string name="chicken_name_is_empty">名前を入力してください</string>
    <string name="chicken_name_over_length">名前が長すぎます</string>
    <string name="chicken_none">ー</string>
    <string name="chicken_nursery">子供部屋</string>
    <string name="chicken_off">オフ</string>
    <string name="chicken_on">オン</string>
    <string name="chicken_opening_movement">開く動作</string>
    <string name="chicken_position">開く方向</string>
    <string name="chicken_power">動作パワー</string>
    <string name="chicken_received_qr">共有コード読み取り</string>
    <string name="chicken_right">右</string>
    <string name="chicken_right_arrow">開く方向（右）</string>
    <string name="chicken_safety_rate_default_fmt">%1$d%% (初期値)</string>
    <string name="chicken_safety_rate_fmt">%1$d%%</string>
    <string name="chicken_second">秒</string>
    <string name="chicken_settings_saved">設定を保存しました</string>
    <string name="chicken_variation">専用</string>
    <string name="close">閉じる</string>
    <string name="com.crashlytics.android.build_id">a255f496-8c25-40a8-aae2-554345f03da0</string>
    <string name="darpan">だーぱん</string>
    <string name="delete">削除</string>
    <string name="dfu_action_abort">Abort</string>
    <string name="dfu_channel_description">Shows DFU progress.</string>
    <string name="dfu_channel_name">DFU</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_aborting">Aborting…</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_completed_msg">Application has been sent successfully.</string>
    <string name="dfu_status_connecting">Connecting…</string>
    <string name="dfu_status_connecting_msg">Connecting to %s…</string>
    <string name="dfu_status_disconnecting">Disconnecting…</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s…</string>
    <string name="dfu_status_error">Upload failed</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
    <string name="dfu_status_foreground_content">Update in progress…</string>
    <string name="dfu_status_foreground_title">Device Firmware Update</string>
    <string name="dfu_status_initializing">Initializing…</string>
    <string name="dfu_status_starting">Starting DFU…</string>
    <string name="dfu_status_starting_msg">Initializing DFU process…</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader…</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader…</string>
    <string name="dfu_status_uploading">Uploading…</string>
    <string name="dfu_status_uploading_msg">Transmitting firmware to %s…</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d…</string>
    <string name="dfu_status_validating">Validating…</string>
    <string name="dfu_status_validating_msg">Validating…</string>
    <string name="dfu_unknown_name">unnamed device</string>
    <string name="done">完了</string>
    <string name="drawer_accessibility_close">メニューを閉じます</string>
    <string name="drawer_accessibility_open">メニューを開きます</string>
    <string name="edit">編集</string>
    <string name="next">次へ</string>
    <string name="nogialarm_set_up_set_user_id_main">メモしたユーザーIDを、上記フォームに入力してください</string>
    <string name="nogialarm_set_up_set_user_id_placeholder">ユーザーID</string>
    <string name="nogialarm_set_up_set_user_id_sub">ユーザーIDを間違えるとOPENタイマー情報を送信できませんのでご注意ください。</string>
    <string name="share_about_help">共有に関するヘルプ</string>
    <string name="tutorial_begin_start">使い始める</string>
</resources>