<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/root" android:background="@color/warm_white" android:layout_width="fill_parent" android:layout_height="@dimen/size_bottom_bar_v"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:gravity="center" android:id="@id/centerTextView" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/tutorial_begin_start" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.App.BottomBar.Center.Emphasis" />
    <TextView android:gravity="center" android:id="@id/rightTextView" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/next" android:paddingStart="@dimen/margin_default_normal" android:paddingEnd="@dimen/margin_default_normal" app:layout_constraintEnd_toEndOf="parent" style="@style/TextAppearance.App.BottomBar.Right.Normal" />
    <TextView android:gravity="center" android:id="@id/leftTextView" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/share_about_help" android:paddingStart="@dimen/margin_default_normal" android:paddingEnd="@dimen/margin_default_normal" app:layout_constraintStart_toStartOf="parent" style="@style/TextAppearance.App.BottomBar.Left.Emphasis" />
</android.support.constraint.ConstraintLayout>