<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/liftTypeRow" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/liftTypeMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_type_main" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/liftTypeSubTextView" app:layout_constraintEnd_toStartOf="@id/liftTypeSwitch" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/liftTypeSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_type_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/liftTypeMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/liftTypeMainTextView" />
        <android.support.v7.widget.SwitchCompat android:id="@id/liftTypeSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/liftPowerRow" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/liftTypeRow">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/liftPowerMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_speed_main" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/liftPowerSubTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/liftPowerSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_speed_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/liftPowerMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/liftPowerMainTextView" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/safetyRateRow" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/liftPowerRow">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/safetyRateMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_safety_rate_main" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/safetyRateSubTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/safetyRateSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/chicken_edit_lifting_safety_rate_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/safetyRateSubWarnTextView" app:layout_constraintEnd_toEndOf="@id/safetyRateMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/safetyRateMainTextView" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub.Warn" android:id="@id/safetyRateSubWarnTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_edit_lifting_safety_rate_sub_warn" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/safetyRateMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/safetyRateSubTextView" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>