<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/mainPowerRow" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/liftTypeRow">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/mainPowerMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_power" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/mainPowerSubTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/mainPowerSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_edit_movement_power_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/mainPowerMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mainPowerMainTextView" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/durationRow" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mainPowerRow">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/durationMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_duration" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/durationSubTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/durationSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_edit_movement_duration_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/durationMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/durationMainTextView" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>