<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:id="@id/detailValueRow" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/detailValueMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_advanced_detail_value_main" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/detailValueSubTextView" app:layout_constraintEnd_toStartOf="@id/detailValueSwitch" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/detailValueSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_advanced_detail_value_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/detailValueMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/detailValueMainTextView" />
        <android.support.v7.widget.SwitchCompat android:id="@id/detailValueSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout android:id="@id/slowLiftingRow" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/detailValueRow">
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Main" android:id="@id/slowLiftingMainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default_row_small" android:text="@string/chicken_advanced_more_slowly_main" android:layout_marginStart="@dimen/margin_default_row" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toTopOf="@id/slowLiftingSubTextView" app:layout_constraintEnd_toStartOf="@id/slowLiftingSwitch" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.App.Row.Sub" android:id="@id/slowLiftingSubTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_default_row_small" android:text="@string/chicken_advanced_more_slowly_sub" android:layout_marginStart="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/slowLiftingMainTextView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/slowLiftingMainTextView" />
        <android.support.v7.widget.SwitchCompat android:id="@id/slowLiftingSwitch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/margin_default_row" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout android:background="@color/row_separator" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>