<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:id="@id/root" android:background="@color/frame_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/bottomBar" app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
            <ImageView android:id="@id/imageView" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="@dimen/margin_page_v_normal" android:layout_marginStart="@dimen/margin_page_h_large" android:layout_marginEnd="@dimen/margin_page_h_large" app:layout_constraintBottom_toTopOf="@id/mainTextView" app:layout_constraintDimensionRatio="w,1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <EditText android:textSize="@dimen/text_size_default_subhead" android:textColor="@color/text_main_black" android:id="@id/userIdEditText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/nogialarm_set_up_set_user_id_placeholder" android:maxLines="1" android:lines="1" android:inputType="text" android:imeOptions="actionDone" app:layout_constraintBottom_toBottomOf="@id/imageView" app:layout_constraintEnd_toEndOf="@id/imageView" app:layout_constraintStart_toStartOf="@id/imageView" app:layout_constraintTop_toTopOf="@id/imageView" />
            <TextView android:textAppearance="@style/TextAppearance.App.Page.Main" android:id="@id/mainTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_page_v_normal" android:text="@string/nogialarm_set_up_set_user_id_main" android:layout_marginStart="@dimen/margin_page_h_normal" android:layout_marginEnd="@dimen/margin_page_h_normal" app:layout_constraintBottom_toTopOf="@id/subTextView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" app:layout_goneMarginBottom="@dimen/margin_default_small2" />
            <TextView android:textAppearance="@style/TextAppearance.App.Page.Sub" android:id="@id/subTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_page_v_small1" android:layout_marginBottom="@dimen/margin_page_v_normal" android:text="@string/nogialarm_set_up_set_user_id_sub" android:layout_marginStart="@dimen/margin_page_h_normal" android:layout_marginEnd="@dimen/margin_page_h_normal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/mainTextView" app:layout_goneMarginBottom="@dimen/margin_default_small2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <jp.co.robit.chicken2.frontend.common.fragment.BottomBar android:id="@id/bottomBar" android:layout_width="fill_parent" android:layout_height="@dimen/size_bottom_bar_v" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>